# build-server

./: .gitignore  Dockerfile.build  Dockerfile.hook  LICENSE  Makefile  README.md  build-server.cabal  run.sh  stack.yaml
hook/: Main.hs
kubernetes/: build-client.yaml  build-ingress.yaml  build-master.yaml  default-backend.yaml
