name:                build-server
version:             0.1.0.0
synopsis:            Haskell Bake + Kubernetes CI/CD
author:              Brian Jones
maintainer:          brian@uncannyworks.com
copyright:           2016 Uncanny Works
license:             MIT
license-file:        LICENSE
cabal-version:       >=1.10

executable build-server
  hs-source-dirs:      build
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bake >= 0.5 && < 0.6
                     , shake >= 0.15 && < 0.16
  default-language:    Haskell2010

executable build-hook
  hs-source-dirs:      hook
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson >= 0.11 && < 1.1
                     , bytestring >= 0.10 && < 0.11
                     , lens >= 4.14 && < 4.16
                     , lens-aeson >= 1.0 && < 1.1
                     , http-conduit >= 2.1 && < 2.3
                     , servant-server >= 0.8 && < 0.9
                     , text >= 1.2 && <1.3
                     , wai >= 3.2 && < 3.3
                     , warp >= 3.2 && < 3.3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/uncannyworks/build-server.git